; ModuleID = '/home/carl/AnghaBench/bitwise/ion/extr_type.c_type_alloc.c'
source_filename = "/home/carl/AnghaBench/bitwise/ion/extr_type.c_type_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64, i32 }

@next_typeid = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_5__* @type_alloc(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_5__*, align 8
  store i32 %0, i32* %2, align 4
  %4 = call %struct.TYPE_5__* @xcalloc(i32 1, i32 16)
  store %struct.TYPE_5__* %4, %struct.TYPE_5__** %3, align 8
  %5 = load i32, i32* %2, align 4
  %6 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %7 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %6, i32 0, i32 1
  store i32 %5, i32* %7, align 8
  %8 = load i32, i32* @next_typeid, align 4
  %9 = add nsw i32 %8, 1
  store i32 %9, i32* @next_typeid, align 4
  %10 = sext i32 %8 to i64
  %11 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %12 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %11, i32 0, i32 0
  store i64 %10, i64* %12, align 8
  %13 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %14 = call i32 @register_typeid(%struct.TYPE_5__* %13)
  %15 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  ret %struct.TYPE_5__* %15
}

declare dso_local %struct.TYPE_5__* @xcalloc(i32, i32) #1

declare dso_local i32 @register_typeid(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
